# loomai

./: DOCKERHUB_README.md  Dockerfile  LICENSE  README.md  docker-compose.standalone.yml  docker-compose.tailscale.yml  docker-compose.yml  entrypoint.sh  install.sh
ai-tools/: README.md
ai-tools/aider/: .aider.conf.yml
ai-tools/claude-code/: CLAUDE.md
ai-tools/crush/: .crush.json
ai-tools/deepagents/: AGENTS.md
ai-tools/fablib-examples/: INDEX.json
backend/: Dockerfile  VERSION  entrypoint.sh  pytest.ini  requirements.txt
backend/app/: ai_assets.py  (+31 more)
backend/cli/: pyproject.toml
backend/cli/loomai_cli/: __main__.py  completions.py  main.py  output.py  shell.py  utils.py
backend/cli/loomai_cli/commands/: ai.py  artifacts.py  bootconfig.py  chameleon.py  composite.py  config.py  experiments.py  facilityports.py  files.py  monitor.py  recipes.py  resources.py  schedule.py  slices.py  ssh.py  status.py  trovi.py  tunnels.py  users.py
backend/cli/tests/: conftest.py  test_all_help.py  test_cli_ai.py  test_cli_config.py  test_cli_roadmap.py  test_completions.py  test_new_commands.py  test_phases3_8.py  test_sites.py
cli/: pyproject.toml
docs/: AGENTS.md  AI_ASSET_FORMAT.md  AI_ASSET_INVENTORY.md  ARCHITECTURE.md  CHAMELEON_SPEC.md  CONVENTIONS.md  DECISIONS.md  FEATURE_PROPAGATION.md  KUBERNETES.md  ROADMAP.md  TEAM_STATUS.md  TERMINAL_PERSISTENCE.md  TESTING.md
frontend/: Dockerfile  eslint.config.mjs  next.config.mjs  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
hub/: Dockerfile  requirements.txt
(+595 files in other folders)
