[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loomai-cli"
version = "0.3.0"
description = "Command-line interface for the FABRIC LoomAI testbed manager"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "pyyaml>=6.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-httpx>=0.30"]

[project.scripts]
loomai = "loomai_cli.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires running LoomAI backend (use --integration flag)",
]
